2011-01-12  JMB  Better properties dialog, translation updates, theme bugfix

    Improved the file properties dialog, including a button to launch the
    column statistics dialog.  Made some updates to the UI translation files.
    Added an option to disable alternating row shading on Fremantle so that
    themes with poor choices of a second color don't look bad (the default
    theme uses the same color for all rows).

2011-01-11  JMB  Better column widths and statistics, Fremantle auto-rotate

    Appended a 0-width empty column to the data table to soak up any extra
    space (useful for right-aligned last columns, and fixes a bug where a
    newly opened file could inherit the width of the previous file's last
    column).  Improved the appearance of the column statistics dialog and gave
    it a widget to control the column's width in pixels.  Added a preferences
    option to enable auto-rotation of the entire application on Fremantle.

2011-01-10  JMB  Fremantle image rotation, adjustable row height

    Allow fullscreen images on Fremantle (including slideshows) to
    auto-rotate with the device orientation.  Also added a preference to allow
    the data table row height to adjust to the font size on Fremantle
    (allowing more rows on the screen but making them harder to accurately tap
    with fingers).

2011-01-09  JMB  Removed row double-clicking, better Maemo backlight handling

    Removed the behavior to show the row viewer when double-clicking on a row
    in the data table; it was interacting badly with the single-click behavior
    and was only one of many ways of launching the row viewer.  The backlight
    on Maemo devices now won't dim or turn off during a slideshow.  Also made
    sure that an earlier fix for improving integer input on Fremantle PR1.2
    won't break on PR1.3.

2011-01-07  JMB  Fremantle checkbox bugfixes, cppcheck warning fixes

    Fixed some erratic checkbox functionality (especially in lists on