@@ -30,6 +30,7 @@
  </qresource>
  <qresource>
      <file alias="appicon/PortaBase.png">icons/mac/PortaBase.png</file>
+     <file>templates/export.html</file>
  </qresource>
  <qresource lang="en">
      <file alias="i18n/PortaBase.qm">translations/portabase_en.qm</file>
