@@ -15,6 +15,7 @@
 
 #include <QApplication>
 #include <QButtonGroup>
+#include <QFileInfo>
 #include <QHeaderView>
 #include <QIcon>
 #include <QKeyEvent>
@@ -25,6 +26,7 @@
 #include <QStackedWidget>
 #include <QStringList>
 #include <QTextDocument>
+#include <QTextStream>
 #include <QTimer>
 #include <QToolButton>
 #include <QTreeWidget>
@@ -300,15 +302,16 @@ int ViewDisplay::columnCount()
 }
 
 /**
- * Generate an HTML string representing the content matching the current view, filter,
- * and sorting settings.  Used for printing.
+ * Generate an HTML string representing the content matching the current
+ * view, filter, and sorting settings.  Used for printing, so it's limited
+ * to the subset of HTML supported by QTextDocument.
  *
  * @return The generated HTML string
  */
-QString ViewDisplay::toHtml()
+QString ViewDisplay::toPrintHTML()
 {
     View *view = model->view();
-    QString result = "<html><head></head><body><table with=\"100%\"><thead><tr>";
+    QString result = "<html><head></head><body><table width=\"100%\"><thead><tr>";
     QStringList colNames = view->getColNames();
     int colCount = colNames.count();
     int i, j;
@@ -330,7 +333,7 @@ QString ViewDisplay::toHtml()
     QStringList imgTags;
     imgTags << "<img src=\"icon://unchecked.png\">";
     imgTags << "<img src=\"icon://checked.png\">";
-    imgTags << "<img src=\"icon://image.png\">";
+    imgTags << "<img src=\"icon://image.png\" width=\"16\" height=\"16\">";
     QString newline("\n");
     QString br("<br>");
     QString left("left");
@@ -581,6 +584,97 @@ void ViewDisplay::exportToCSV(const QString &filename)
 }
 
 /**
+ * Export the information in the current view and filter to an HTML file at
+ * the specified path.  The records are listed in the current sorting order.
+ * Unlike the HTML generated for printing, this method's output is intended
+ * to be a standalone page viewable in normal web browsers, with easily
+ * overridden display properties.
+ *
+ * @param filename The HTML file to create or overwrite
+ */
+void ViewDisplay::exportToHTML(const QString &filename)
+{
+    // Open the output template
+    QFile templateFile(":/templates/export.html");
+    if (!templateFile.open(QFile::ReadOnly)) {
+        QMessageBox::information(this, qApp->applicationName(),
+                                 tr("Unable to open output template"));
+        return;
+    }
+    QTextStream stream(&templateFile);
+    QString result = stream.readAll();
+    templateFile.close();
+
+    // populate the title and row colors
+    result = result.arg(QFileInfo(filename).completeBaseName());
+    result = result.arg(Factory::evenRowColor.name());
+    result = result.arg(Factory::oddRowColor.name());
+
+    // populate the column headers
+    View *view = model->view();
+    QStringList lines;
+    QStringList colNames = view->getColNames();
+    int colCount = colNames.count();
+    int i, j;
+    QString headerPattern("<th>%1</th>\n");
+    for (i = 0; i < colCount; i++) {
+        lines.append(headerPattern.arg(Qt::escape(colNames[i])));
+    }
+    QFile f(filename);
+    if (!f.open(QFile::WriteOnly)) {
+        return;
+    }
+    QTextStream output(&f);
+    output.setCodec("UTF-8");
+    output << result.arg(lines.join(""));
+
+    // populate the data
+    int rowCount = view->totalRowCount();
+    int *types = view->getColTypes();
+    QStringList data;
+    int type;
+    QStringList rowStarts;
+    rowStarts << "<tr class=\"even\">\n" << "<tr class=\"odd\">\n";
+    QString rowEnd("</tr>\n");
+    QString leftPattern = "<td>%1</td>\n";
+    QString rightPattern = "<td class=\"r\">%1</td>\n";
+    QStringList divs;
+    divs << "<td><div class=\"n\">&#9744;</div></td>\n";
+    divs << "<td><div class=\"y\">&#9745;</div></td>\n";
+    divs << "<td><div class=\"i\">&#9997;</div></td>\n";
+    QString newline("\n");
+    QString br("<br>");
+    QString value;
+    for (i = 0; i < rowCount; i++) {
+        output << rowStarts[i % 2];
+        data = view->getRow(i);
+        for (j = 0; j < colCount; j++) {
+            type = types[j];
+            if (type == INTEGER || type == FLOAT || type == CALC
+                || type == SEQUENCE) {
+                output << rightPattern.arg(data[j]);
+            }
+            else if (type == BOOLEAN) {
+                output << divs[data[j].toInt()];
+            }
+            else if (type == IMAGE && !data[j].isEmpty()) {
+                output << divs[2];
+            }
+            else if (type == NOTE || type == STRING) {
+                value = Qt::escape(data[j]).replace(newline, br);
+                output << leftPattern.arg(value);
+            }
+            else {
+                output << leftPattern.arg(data[j]);
+            }
+        }
+        output << rowEnd;
+    }
+    output << "</tbody>\n</table>\n</body>\n</html>\n";
+    f.close();
+}
+
+/**
  * Export the full PortaBase file content to an XML file.  The records are
  * listed in the current sorting order, and the ones which do not match the
  * current filter are marked with an 'h="y"' attribute (an abbreviation for
@@ -680,6 +774,9 @@ void ViewDisplay::cellReleased(const QModelIndex &index)
         }
         else if (type == IMAGE) {
             int rowId = selectedRowId();
+            if (rowId == -1) {
+                return;
+            }
             View *view = model->view();
             QString format = view->getImageFormat(rowId, column);
             if (!format.isEmpty()) {
